# BatteryConsumption

./: BatteryConsumption.kdev4  CMakeLists.txt  Messages.sh  README  WattRate.kdev4  batteryconsumption.cpp  batteryconsumption.h  plasma-applet-batteryconsumption.desktop  plasma-applet-wattrate.desktop  upower.xml  upowerdev.xml  upowerhandler.cpp  upowerhandler.h  wattrate.cpp  wattrate.h
